--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -1,6 +1,7 @@
 @import "breakpoint";
 @import "susy";
 @import "compass/utilities/general/clearfix";
+@import "open-iconic";
 
 /*// body { @include container(50em); }
 // Setting up the Magic Grid
@@ -11,12 +12,103 @@
     //grid-padding: 1em // and 1em padding on the grid container
     //container-width: 50em
 //);*/
+/*
+main
 
-body {
+header.TopBar
+
+nav.NavBar
+
+form.SearchBar
+*/
+
+/*main {
     @include breakpoint(600px) {
         @include container;
-        @include clearfix;
+        //@include clearfix;
         border: 1px solid red;
+    }
+}*/
+
+//$total-columns: 10; // 10 columns
+//$column-width: 4em; // columns are 4em wide
+//$gutter-width: 1em; // with 1em gutters
+//$grid-padding: 1em; // and 1em padding on the grid container
+//            $total-columns: 4; // 10 columns
+            $column-width: 1em; // columns are 4em wide
+//            $gutter-width: 0; // with 1em gutters
+//            $grid-padding: 0; // and 1em padding on the grid container
+
+body {
+    background: none repeat scroll 0% 0% #2F2F2F;
+    font-family: "Ubuntu","Lucida Grande","Lucida Sans",Tahoma,sans-serif;
+}
+body, a:link {
+    color: #C6C6C6;
+}
+a:link {
+    text-decoration: none;
+}
+@mixin hr-with-shadow($width) {
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.07);
+    border-bottom: $width solid #121212;
+}
+div {
+    header.TopBar {
+        @include hr-with-shadow(4px);
+        nav.NavBar {
+            @include container;
+            //font-family: "Open Sans",sans-serif;
+            //background-color: #EAEAEA;
+            h2.home {
+                @include span(1 of 2);
+            }
+            h2.login-info {
+                @include span(1 of 2 last);
+            }
+            h2 {
+                //@include with-layout(gutters 0);
+                //margin: 0;
+                //font-size: 2.5em;
+                padding: .2em 0;
+                text-align: center;
+                //background-color: #E7E7E7;
+            }
+        }
+    }
+}
+section.SearchBar {
+    @include span(1 of 1 last);
+    @include hr-with-shadow(1px);
+    text-align: center;
+    padding: 1em 0;
+}
+form.SearchBar {
+    color: #6E6E6E;
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.1), 0px 1px 7px 0px rgba(0, 0, 0, 0.8) inset;
+    background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    border: 0px none;
+    font-size: 0.8em;
+    &:before {
+    }
+    input[type="text"] {
+        color: #6E6E6E;
+        background: none repeat scroll 0% 0% rgba(0, 0, 0, 0);
+        border: 0px none;
+    }
+    padding: 1em 0;
+    display: inline-block;
+}
+main {
+    @include span(1 of 1 last);
+    @include container;
+    h2.results-heading {
+        @include span(1 of 1 last);
+    }
+    article.phraseSearchResultsList {
+        @include span(1 of 1 last);
+        @include container;
     }
 }
 
