structured sass in a way that it's easy to have low-contrast css based on a few basic settings.

--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -450,6 +450,7 @@ main.login {
             }
             input[type="submit"] {
                 @extend .base-submit-input;
+                margin-top: 1.7em;
             }
             input {
                 display: block;
